syntax = "proto3";
package todo;

service Todo {
	rpc List(TodoFilter) returns (stream TodoRequest) {}
	rpc Add(TodoRequest) returns (TodoResponse) {}
}

message TodoRequest {
	int32 id = 1;
	uint64 created = 7;
	string list = 6;
	string title = 2;
	string description = 3;
	int32 priority = 4;
	bool done = 5;
}

message TodoResponse {
	int32 id = 1;
	bool success = 2;
}

message TodoFilter {
	string text = 1;
	bool all = 2;
	string list = 3;
}
